<resources>
    <string name="app_name">ALAZAN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Background">background</string>
    <string name="current_location">Current location</string>
    <string name="choose_location_manually">Choose location manually</string>
    <string name="internet_search">Internet search</string>
    <string name="update_current_location">Update current location</string>
    <string name="adjust_current_location">Adjust current location</string>
    <string name="last_known_device_location">Last known location</string>
    <string name="gps">GPS</string>
    <string name="the_network">Network</string>
    <string name="save">Save</string>
    <string name="the_time_location">Time Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="choose_the_country">Choose Country</string>
    <string name="search">Search</string>
    <string name="choose_the_city">Choose City</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="convert_date">Convert Date</string>
    <string name="compass">Compass</string>
    <string name="about_application">About Application</string>
    <string name="problems_and_suggestions">Problems and Suggestions</string>
    <string name="locations">Locations</string>
    <string name="share_application">Share Application</string>
    <string name="hijri_month_1">Muharram</string>
    <string name="hijri_month_2">Safar</string>
    <string name="hijri_month_3">Rabi\' Al Awwal</string>
    <string name="hijri_month_4">Rabi\' Al Thani</string>
    <string name="hijri_month_5">Jumada Al Awwal</string>
    <string name="hijri_month_6">Jumada Al Thani</string>
    <string name="hijri_month_7">Rajab</string>
    <string name="hijri_month_8">Sha\'ban</string>
    <string name="hijri_month_9">Ramadan</string>
    <string name="hijri_month_10">Shawwal</string>
    <string name="hijri_month_11">Dhu Al Qi\'dah</string>
    <string name="hijri_month_12">Dhu Al Hijjah</string>
    <string-array name="hijri_month">
        <item>@string/hijri_month_1</item>
        <item>@string/hijri_month_2</item>
        <item>@string/hijri_month_3</item>
        <item>@string/hijri_month_4</item>
        <item>@string/hijri_month_5</item>
        <item>@string/hijri_month_6</item>
        <item>@string/hijri_month_7</item>
        <item>@string/hijri_month_8</item>
        <item>@string/hijri_month_9</item>
        <item>@string/hijri_month_10</item>
        <item>@string/hijri_month_11</item>
        <item>@string/hijri_month_12</item>
    </string-array>
    <string name="gregorian_month_1">January</string>
    <string name="gregorian_month_2">February</string>
    <string name="gregorian_month_3">March</string>
    <string name="gregorian_month_4">April</string>
    <string name="gregorian_month_5">May</string>
    <string name="gregorian_month_6">June</string>
    <string name="gregorian_month_7">July</string>
    <string name="gregorian_month_8">August</string>
    <string name="gregorian_month_9">September</string>
    <string name="gregorian_month_10">October</string>
    <string name="gregorian_month_11">November</string>
    <string name="gregorian_month_12">December</string>
    <string-array name="gregorian_month">
        <item>@string/gregorian_month_1</item>
        <item>@string/gregorian_month_2</item>
        <item>@string/gregorian_month_3</item>
        <item>@string/gregorian_month_4</item>
        <item>@string/gregorian_month_5</item>
        <item>@string/gregorian_month_6</item>
        <item>@string/gregorian_month_7</item>
        <item>@string/gregorian_month_8</item>
        <item>@string/gregorian_month_9</item>
        <item>@string/gregorian_month_10</item>
        <item>@string/gregorian_month_11</item>
        <item>@string/gregorian_month_12</item>
    </string-array>
    <string name="day_of_week1">Sunday</string>
    <string name="day_of_week2">Monday</string>
    <string name="day_of_week3">Tuesday</string>
    <string name="day_of_week4">Wednesday</string>
    <string name="day_of_week5">Thursday</string>
    <string name="day_of_week6">Friday</string>
    <string name="day_of_week7">Saturday</string>
    <string-array name="day_of_week">
        <item>@string/day_of_week1</item>
        <item>@string/day_of_week2</item>
        <item>@string/day_of_week3</item>
        <item>@string/day_of_week4</item>
        <item>@string/day_of_week5</item>
        <item>@string/day_of_week6</item>
        <item>@string/day_of_week7</item>
    </string-array>
    <string name="prayer_time">prayer time</string>
    <string name="adjust_time_manually">Adjust time manually</string>
    <string name="reset_time_settings">Reset time settings</string>
    <string name="activate_azan_notifications">Activate azan notifications</string>
    <string name="activate_iqama_notifications">Activate iqama notifications</string>
    <string name="choose_alarm_tone">Choose alarm tone</string>
    <string name="prayer_time_settings">prayer time settings</string>
    <string name="saved_locations">Saved locations</string>
    <string name="remaining_time">Remaining time</string>
    <string name="add_location">Add location</string>
    <string name="iqama_time">iqama time</string>
    <string name="convert_from_hijri">Convert from hijri</string>
    <string name="convert_from_gregorian">Convert from gregorian</string>
    <string name="add_current_location">Add current location</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="delete_location">Delete the location</string>
    <string name="set_as_current_location">Set as current location</string>
    <string-array name="location_widget_options">
        <item>@string/delete_location</item>
        <item>@string/set_as_current_location</item>
    </string-array>
    <string name="prayer_times_settings">Prayer Times Settings</string>
    <string name="hijri_settings">Hijri Settings</string>
    <string name="display_options">Display Options</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="fajr_and_sahoor_alarm">Fajr and Sahoor Alarm</string>
    <string name="silent_settings">Silent Settings</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string-array name="settings_menu">
        <item>@string/prayer_times_settings</item>
        <item>@string/hijri_settings</item>
        <item>@string/display_options</item>
        <item>@string/notification_settings</item>
        <item>@string/silent_settings</item>
        <item>@string/backup_and_restore</item>
    </string-array>
    <string name="settings_for_calculating_prayer_times">Settings for calculating prayer times</string>
    <string name="choose_hijri_date_settings">Choose Hijri date settings</string>
    <string name="change_language_and_colors_for_the_app_and_widgets">Change language and colors for the app and widgets</string>
    <string name="select_your_notifications_and_reminders_settings">Select your notifications and reminders settings</string>
    <string name="fajr_and_sahoor_wake_up_alarm_settings">Fajr and Sahoor wake up alarm settings</string>
    <string name="adjust_the_silent_mode_settings_for_each_prayer">Adjust the silent mode settings for each prayer</string>
    <string name="settings_backup_and_restore">Settings backup and restore</string>
    <string-array name="settings_submenu">
        <item>@string/settings_for_calculating_prayer_times</item>
        <item>@string/choose_hijri_date_settings</item>
        <item>@string/change_language_and_colors_for_the_app_and_widgets</item>
        <item>@string/select_your_notifications_and_reminders_settings</item>
        <item>@string/adjust_the_silent_mode_settings_for_each_prayer</item>
        <item>@string/settings_backup_and_restore</item>
    </string-array>
    <string name="choose_display_language">Choose display language</string>
    <string name="location_widget_details">details and other informations:</string>
    <string name="prayer_notification">Prayer Notification</string>
    <string name="iqama_reminders">Iqama Reminders</string>
    <string name="general">General</string>
    <string name="settings_layouts_notifications_widget1">Prayer Notification Times</string>
    <string name="settings_layouts_notifications_widget2">Notify</string>
    <string name="settings_layouts_notifications_widget3">Notification Audio Type</string>
    <string name="settings_layouts_notifications_widget4">Prayer Notification Tone</string>
    <string name="settings_layouts_notifications_widget5">Clear Notification Automatically</string>
    <string name="settings_layouts_notifications_widget6">Clear Time</string>
    <string name="settings_layouts_notifications_widget7">Iqama Times</string>
    <string name="settings_layouts_notifications_widget8">Iqama Reminder</string>
    <string name="settings_layouts_notifications_widget9">Reminder Audio Type</string>
    <string name="settings_layouts_notifications_widget10">Iqama Reminder Tone</string>
    <string name="settings_layouts_notifications_widget11">Clear Reminder Automatically</string>
    <string name="settings_layouts_notifications_widget12">Clear Time</string>
    <string name="settings_layouts_notifications_widget13">Vibrate</string>
    <string name="settings_layouts_notifications_widget14">LED Notification</string>
    <string name="settings_layouts_notifications_widget_details1">Prayer notification settings for each prayer</string>
    <string name="settings_layouts_notifications_widget_details2">Notification on prayer time</string>
    <string name="settings_layouts_notifications_widget_details3">Link notifications to a system sound type.\nPreferably use alarm type to notify on silent</string>
    <string name="settings_layouts_notifications_widget_details4">Select the prayer notification tone</string>
    <string name="settings_layouts_notifications_widget_details5">Clear the notification after a given time</string>
    <string name="settings_layouts_notifications_widget_details6">Current value in minutes: </string>
    <string name="settings_layouts_notifications_widget_details7">Iqama reminder settings for each prayer</string>
    <string name="settings_layouts_notifications_widget_details8">Reminder that prayer is about to start</string>
    <string name="settings_layouts_notifications_widget_details9">Link reminders to a system sound type.\nPreferably use alarm type to remind on silent</string>
    <string name="settings_layouts_notifications_widget_details10">Select the Iqama reminder tone</string>
    <string name="settings_layouts_notifications_widget_details11">Clear the reminder after a given time</string>
    <string name="settings_layouts_notifications_widget_details12">Current value in minutes: </string>
    <string name="settings_layouts_notifications_widget_details13">Activate vibration for notifications and reminders</string>
    <string name="settings_layouts_notifications_widget_details14">Activate LED notification for notifications and reminders</string>
    <string name="calculations">Calculations</string>
    <string name="settings_layouts_prayer_times_widget_details1">Different methods to calculate Fajr and Isha prayers</string>
    <string name="remembrance">Remembrance</string>
</resources>