<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nab_remembrance"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/remembrance" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_convert_date"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/convert_date" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/locations"/>

    </group>

</menu>